--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,6 @@ Metrics/BlockLength:
   - "**/*_spec.rb"
   - "**/*_docs.rb"
 
-require: rubocop-rspec
+#require: rubocop-rspec
 RSpec/NestedGroups:
   Max: 5
